# external.libremix

./: configure.ac  project.config
debian/: changelog  control  libremix-dev.install
include/remix/: remix.h  remix_plugin.h  remix_types.h
packaging/: libremix.spec
src/ctxdata/: cd_list.c
src/examples/: Makefile.am  simple_sndfiledemo.c  simple_squaredemo.c
src/libremix/: remix_base.c  remix_context.c  remix_debug.c  remix_deck.c  remix_envelope.c  remix_layer.c  remix_monitor.c  remix_plugin.c  remix_private.h  remix_sndfile.c  remix_sound.c  remix_squaretone.c  remix_stream.c  remix_track.c
src/plugins/ladspa/: remix_ladspa.c
src/plugins/noise/: remix_noise.c
